phase2-k3s/manifests/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dev
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
